checks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-check  
  namespace: health-check  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health-check
  template:
    metadata:
      labels:
        app: health-check
    spec:
      containers:
      - name: health-check
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: health-check  
  namespace: health-check  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: health-check
